<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Title</string>
    <string name="description">Decription</string>
    <string name="subtitle">SubTitle</string>
    <string name="label">Label</string>
    <string name="text">Text test</string>
    <string name="error">Error</string>
    <string name="empty"></string>
    <string name="b_token">bToken</string>
    <string name="ok">OK</string>
    <string name="message">Message</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="help">Help</string>
    <string name="button_error">Set Error</string>
    <string name="button_token">Set Token</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="custom_icon">Custom icon</string>
    <string name="not_found_results"><![CDATA[Não foram econtrados resultados para <br> ”<b>%s</b>”]]></string>
    <string name="all_text_exclude">Excluir</string>
    <string name="transfer_button_item_edit">Editar</string>
    <string name="button_confirm">Confirmar</string>
    <string name="footer_relationship_center">Central de relacionamento</string>
    <string name="footer_telephone_relationship_center">3003 0807</string>
    <string name="footer_capitals_metropolitan_regions">Capitais e regiões metropolitanas</string>
    <string name="footer_phones">0800 326 0807</string>
    <string name="footer_other_regions">Demais regiões</string>
    <string name="footer_ombudsman">Ouvidoria</string>
    <string name="footer_service_description">Atendimento das 9h às 17h30 em dias úteis.</string>
    <string name="link"><![CDATA[Teste de link <a href="https://www.google.pl/">Google</a>]]></string>
    <string name="action_title">Call to Action</string>
    <string name="button_advance">Avançar</string>
    <string name="text_with_html"><![CDATA[<ul><li><b>Menu1</b></li><li>Menu2</li><li>Menu3</li></ul>]]></string>

    <!--  OceanDateRangeSelectFilterSheet  -->
    <string name="date_range_filter_title">Período</string>
    <string name="date_range_begin_date">Data inicial</string>
    <string name="date_range_end_date">Data final</string>
    <string name="date_range_button_confirm">Filtrar</string>
    <string name="date_range_button_clear">Limpar</string>

    <string name="date_range_invalid_date_error">Data inválida</string>
    <string name="date_range_empty_error">Este campo não pode ficar em branco</string>
    <string name="date_range_invalid_range_error">A data inicial deve ser menor ou igual à data final</string>
    <string name="date_picker_date_selected_tooltip">Data selecionada</string>
    <string name="date_picker_disabled_date_tooltip">Esta data não está disponível para seleção</string>

    <!--  PinPad Currency Default  -->
    <string name="pinpad_currency_message_larger">Digite um valor maior do que %s.</string>
    <string name="pinpad_currency_message_less">Digite um valor menor do que %s.</string>
    <string name="pinpad_currency_empty_error">Digite um valor para continuar</string>

    <string-array name="ocean_week_day_labels">
        <item>Dom</item>
        <item>Seg</item>
        <item>Ter</item>
        <item>Qua</item>
        <item>Qui</item>
        <item>Sex</item>
        <item>Sáb</item>
    </string-array>

    <string-array name="ocean_month_labels">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
</resources>
