<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ocean_color_interface_light_up"
        android:orientation="horizontal"
        android:padding="@dimen/ocean_spacing_stack_sm">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_relationship_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_regular"
                android:text="@string/footer_relationship_center"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="@dimen/ocean_font_size_xxxs" />

            <TextView
                android:id="@+id/telephone_relationship_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_bold"
                android:text="@string/footer_telephone_relationship_center"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="@dimen/ocean_font_size_xxxs" />

            <TextView
                android:id="@+id/text_capitals_metropolitan_regions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_regular"
                android:text="@string/footer_capitals_metropolitan_regions"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/telephone_other_regions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ocean_spacing_stack_xxs"
                android:fontFamily="@font/font_family_base_bold"
                android:text="@string/footer_phones"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="@dimen/ocean_font_size_xxxs" />

            <TextView
                android:id="@+id/text_other_regions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_regular"
                android:text="@string/footer_other_regions"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="10sp" />
        </LinearLayout>

        <Space
            android:layout_width="@dimen/ocean_spacing_stack_sm"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_ombudsman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_regular"
                android:text="@string/footer_ombudsman"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="@dimen/ocean_font_size_xxxs" />

            <TextView
                android:id="@+id/telephone_ombudsman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_bold"
                android:text="@string/footer_phones"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="@dimen/ocean_font_size_xxxs" />

            <TextView
                android:id="@+id/text_service_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_regular"
                android:text="@string/footer_service_description"
                android:textColor="@color/ocean_color_interface_dark_deep"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</layout>