<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="type"
            type="Integer" />

        <variable
            name="label"
            type="String" />

        <variable
            name="hint"
            type="String" />

        <variable
            name="value"
            type="String" />

        <variable
            name="error"
            type="String" />

        <variable
            name="help"
            type="String" />
    </data>

    <merge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ocean_spacing_stack_xxs"
                android:fontFamily="@font/font_family_base_regular"
                android:lineSpacingMultiplier="@dimen/ocean_line_height_medium"
                android:text="@{label}"
                android:textColor="@color/ocean_color_interface_dark_down"
                android:textSize="@dimen/ocean_font_size_xxs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ocean_spacing_inline_xxs"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label"
                app:passwordToggleTint="@color/ocean_color_interface_light_deep">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_family_base_regular"
                    android:hint="@{hint}"
                    android:imeOptions="actionGo"
                    android:padding="@dimen/ocean_spacing_inline_xs"
                    android:text="@={value}"
                    android:textColor="@color/ocean_color_interface_dark_deep"
                    android:textColorHint="@color/ocean_color_interface_light_deep"
                    android:textCursorDrawable="@drawable/ocean_cursor"
                    android:textSize="@dimen/ocean_font_size_xs"
                    app:ocean_background="@{error.length() > 0}"
                    app:ocean_inputType='@{type}' />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_medium"
                android:text="@{error}"
                android:textColor="@color/ocean_color_status_negative_pure"
                android:textSize="@dimen/ocean_font_size_xxxs"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:ocean_visible_or_invisible="@{(error.length() > 0)}"
                tools:text="@string/error" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_family_base_medium"
                android:text="@{help}"
                android:textColor="@color/ocean_color_interface_dark_up"
                android:textSize="@dimen/ocean_font_size_xxxs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:ocean_visible_or_invisible="@{(help.length() > 0 &amp;&amp; (error.length() == 0))}"
                tools:text="@string/help" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </merge>
</layout>